Added sensor API
