# go/api_sensor.go
@@ -1,0 +1,78 @@
+/*
+ * Tasmota Device Manager API
+ *
+ * Device manager for Tasmota devices via MQTT [Source](https://github.com/mbezuidenhout/tasmota.mqtt.device.manager).
+ *
+ * API version: 0.1.0
+ * Contact: marius.bezuidenhout@gmail.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+import (
+	"encoding/json"
+	"fmt"
+	"net/http"
+	"time"
+
+	"github.com/gorilla/mux"
+)
+
+func SensorTypeDeviceTopicSensorTypeGet(w http.ResponseWriter, r *http.Request) {
+	apiKey := r.Header.Get("X-Api-Key")
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	if managers[apiKey] == nil {
+		w.WriteHeader(http.StatusUnauthorized)
+	} else {
+		deviceTopic, ok1 := mux.Vars(r)["deviceTopic"]
+		sensorType, ok2 := mux.Vars(r)["sensorType"]
+		if !ok1 || !ok2 {
+			w.WriteHeader(http.StatusUnprocessableEntity)
+		} else {
+			managers[apiKey].lastUpdate = time.Now()
+			w.WriteHeader(http.StatusOK)
+			data, _ := json.Marshal(managers[apiKey].GetDevice(deviceTopic).GetSensor(sensorType))
+			fmt.Fprintln(w, string(data))
+			fmt.Printf("Context %s", deviceTopic)
+		}
+	}
+}
+
+func SensorTypesDeviceTopicGet(w http.ResponseWriter, r *http.Request) {
+	apiKey := r.Header.Get("X-Api-Key")
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	if managers[apiKey] == nil {
+		w.WriteHeader(http.StatusUnauthorized)
+	} else {
+		deviceTopic, ok := mux.Vars(r)["deviceTopic"]
+		if !ok {
+			w.WriteHeader(http.StatusUnprocessableEntity)
+		} else {
+			managers[apiKey].lastUpdate = time.Now()
+			w.WriteHeader(http.StatusOK)
+			data, _ := json.Marshal(managers[apiKey].GetDevice(deviceTopic).GetSensorTypes())
+			fmt.Fprintln(w, string(data))
+			fmt.Printf("Context %s", deviceTopic)
+		}
+	}
+}
+
+func SensorsDeviceTopicGet(w http.ResponseWriter, r *http.Request) {
+	apiKey := r.Header.Get("X-Api-Key")
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	if managers[apiKey] == nil {
+		w.WriteHeader(http.StatusUnauthorized)
+	} else {
+		deviceTopic, ok := mux.Vars(r)["deviceTopic"]
+		if !ok {
+			w.WriteHeader(http.StatusUnprocessableEntity)
+		} else {
+			managers[apiKey].lastUpdate = time.Now()
+			w.WriteHeader(http.StatusOK)
+			data, _ := json.Marshal(managers[apiKey].GetDevice(deviceTopic).Sensors)
+			fmt.Fprintln(w, string(data))
+			fmt.Printf("Context %s", deviceTopic)
+		}
+	}
+
+}
